[tool.poetry]
name = "cython_test"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
easycython = "^1.0.7"
Cython = "^0.29.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
